fixed the button icon align SCSS #3

--- a/src/blocks/booking-card/booking-card.scss
+++ b/src/blocks/booking-card/booking-card.scss
@@ -18,7 +18,7 @@
   }
 
   &__dropdown {
-    margin-top: 18px;
+    margin-top: 19px;
   }
 
   &__button {
