--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -4,7 +4,7 @@
 
 .button {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 
   padding: 2px;
@@ -42,7 +42,6 @@
   }
 
   &__button {
-    min-width: 100%;
     min-height: 100%;
     display: flex;
     justify-content: center;
@@ -96,14 +95,14 @@
     }
 
     &_large {
-      padding: 13px 50px 12px 46px;
+      padding: 13px 50px 12px 89px;
     }
   }
 
   &__icon {
-    position: absolute;
-    top: 33%;
-    right: 13px;
+    padding-right: 12px;
+    padding-top: 3px;
+
     color: map.get(variables.$colors, 'tertiary');
     font-size: 16px;
 
