--- a/src/blocks/dropdown/dropdown.scss
+++ b/src/blocks/dropdown/dropdown.scss
@@ -27,7 +27,7 @@
     width: 100%;
     display: block;
     padding: 12px 15px;
-    margin-top: 5px;
+    margin-top: 4px;
     border: 1px solid rgb(map.get(variables.$colors, 'dark'), 0.25);
     color: rgb(map.get(variables.$colors, 'dark'), 0.75);
     border-radius: 4px;
